--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Riding under the Sun,horse riding club">
+    <meta name="keywords" content="riding under the sun,horse riding club">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Riding under the Sun</title>
 </head>
 <body>
-   <h1>Hello world!</h1> 
+   <h1>Hello World!</h1> 
 </body>
 </html>
