Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>Riding under the Sun</title>
 </head>
 <body>
-   <h1>Hello World!</h1> 
+   <header> Header content </header>
+   <section>Main image</section>
+   <section>About the club</section>
+   <section>location</section>
+   <footer>Social media links</footer>
 </body>
 </html>
