Add basic structure to the header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +11,27 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Riding under the Sun</title>
 </head>
+
 <body>
-   <header> Header content </header>
-   <section>Main image</section>
-   <section>About the club</section>
-   <section>location</section>
-   <footer>Social media links</footer>
+    <header>
+        <a href="index.html">
+            <h1>Riding unde the Sun</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>Main image</section>
+    <section>About the club</section>
+    <section>location</section>
+    <footer>Social media links</footer>
 </body>
+
 </html>
