remove default margins,padding and borders

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Riding unde the Sun</h1>
+            <h1>Riding under the Sun</h1>
         </a>
         <nav>
             <ul>
