--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <h1 id="logo">Riding under the Sun</h1>
         </a>
         <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
+            <ul id="menu">
                 <li>
                     <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
