Styling the header and the image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 id="logo">Riding under the Sun</h1>
+            <h1 id="logo"> Riding under the Sun</h1>
         </a>
         <nav>
             <ul id="menu">
@@ -28,7 +28,11 @@
             </ul>
         </nav>
     </header>
-    <section>Main image</section>
+    <section id="cover-outer">
+        <div id="cover-image">
+
+        </div>
+    </section>
     <section>About the club</section>
     <section>location</section>
     <footer>Social media links</footer>
