Add home page main structure

--- a/index.html
+++ b/index.html
@@ -33,7 +33,41 @@
 
         </div>
     </section>
-    <section>About the club</section>
+
+    <section id="about-us">
+    <h2>About us</h2>
+
+    <div id= "left-about">Left</div>
+    <div id= "right-about">Right</div>
+    <div id= "center-about">Center</div>
+    <p>
+        
+        Welcome to
+        Riding under the Sun Centre and Riding School
+a family run riding centre and one of Spain's premier equestrian establishments. We have been providing a quality equestrian service for over 40 years now and invite you to browse through our site to discover the many facilities and services we offer.
+
+        The centre is located in suburban Malaga only 50 km from the city centre yet it is located in a very picturesque
+        setting offering magnificent views of Parque Nacional Sierra de las Nieves.
+
+        
+    </p>
+</section>
+    <br>
+    <p>
+        Opening Hours
+
+        Monday-Friday: 08:00Hrs - 22:00Hrs
+
+        Saturday: 08:00Hrs - 17:30Hrs
+
+        Sunday: 08:00Hrs - 14:00Hrs
+
+        Closed on Sundays during July & August
+
+        Closed Bank Holidays
+    </p>
+
+    </section>
     <section>location</section>
     <footer>Social media links</footer>
 </body>
