Style the right section main page

--- a/index.html
+++ b/index.html
@@ -72,11 +72,14 @@
         </div>
         <div id="right-about">
             <div id="right-picture-container">
-                <div id="picture-cover-bg">
-
+                <div id="picture-cover-bg"></div>
+            </div>
+          
+            <div id="right-picture-down">
+                <div id="picture-cover-bg-down"></div>
             </div>
             
-        </div>
+            </div>
 
 
         <div id="center-about">Center</div>
