Style center section main page

--- a/index.html
+++ b/index.html
@@ -72,17 +72,24 @@
         </div>
         <div id="right-about">
             <div id="right-picture-container">
-                <div id="picture-cover-bg"></div>
-            </div>
-          
-            <div id="right-picture-down">
-                <div id="picture-cover-bg-down"></div>
-            </div>
-            
+                <div id="right-picture-bg"></div>
             </div>
 
+            <div id="right-picture-container-down">
+                <div id="right-picture-bg-down"></div>
+            </div>
 
-        <div id="center-about">Center</div>
+        </div>
+
+        <div id="center-about">
+            <div id="center-picture">
+                <div id="center-picture-bg"></div>
+            </div>
+
+            <div id="center-picture-down">
+                <div id="center-picture-bg-down"></div>
+            </div>
+        </div>
 
     </section>
     <br>
