Add html elements to gallery page

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
                 </p>
             </div>
             <div class="left-about-heading">
-                <h2>Opening Hours</h2>
+                <h2>Opening Hours <i class="fa-regular fa-clock"></i> </h2>
                 <hr>
                 <p>
 
@@ -96,6 +96,9 @@
 
 
     </section>
+
+    <!--font awsome script-->
+    <script src="https://kit.fontawesome.com/5fa5c257b5.js" crossorigin="anonymous"></script>
 
 </body>
 
