--- a/gallery.html
+++ b/gallery.html
@@ -29,11 +29,18 @@
         </nav>
     </header>
 
-
-
+    <section id="photos">
+        <img src="assets/images/rsz_1pexels-bartosz-bartkowiak-3723103.jpg" alt="rider jumping obstacle">
+        <img src="assets/images/rsz_1pexels-mídia-1462364.jpg" alt="rider in the race">
+        <img src="assets/images/rsz_1pexels-bianca-1236028.jpg" alt="group of people horse riding on a beach">
+        <img src="assets/images/rsz_pexels-rodnae-productions-8625707.jpg" alt="girl on a horse">
+        <img src="assets/images/rsz_1pexels-mikhail-nilov-8919477.jpg" alt="girl on a black horse">
+        <img src="assets/images/rsz_1pexels-gustavo-fring-4895010.jpg" alt="girl training a horse">
+        <img src="assets/images/rsz_1pexels-theother-kev-5655501.jpg" alt="rider on a white horse jumping over obstacle">
+        <img src="assets/images/rsz_1pexels-mikhail-nilov-9268881.jpg" alt="3 man riding horses">
+        <img src="assets/images/rsz_1pexels-anna-kester-10376090.jpg" alt="group of people on a trail ride">
     </section>
 
-  
 </body>
 
 </html>
