--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,10 @@
                     <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
+                    <a href="price-list.html">Price List</a>
+                </li>
+
+                <li>
                     <a href="index.html">Home</a>
                 </li>
             </ul>
