--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 <li>
                     <a href="gallery.html">Gallery</a>
                 </li>
+
+                <li>
+                    <a href="price-list.html">Price List</a>
+                </li>
+
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
