Add contact and booking section

--- a/price-list.html
+++ b/price-list.html
@@ -38,7 +38,7 @@
 
         </div>
     </section>
-    <h1>Price list January 2023</h1>
+    <h1 id="price-list">Price list January 2023</h1>
     <br>
     <table id="service">
         <tr>
@@ -115,9 +115,10 @@
     </table>
     <br>
 
+    <section id="contact">
     <h2>For bookings and enquiries please contact us on below:</h2>
     <h3>Email: ridingunderthesun@gmail.com</h3>
     <h3> Phone: +34 000 888 000</h3>
-
+</section>
    
 </body>
