Add footer to the page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,26 @@
                     The centre is located in suburban Malaga only 50 km from the city centre yet it is located in a very
                     picturesque
                     setting offering magnificent views of Parque Nacional Sierra de las Nieves.
+                    From quiet country lanes for the laid-back horseback rider to full cross-country courses for the
+                    more adventurous,
+                    our instructors are fully trained and experienced. We welcome riders of all levels from beginners to
+                    the experienced,
+                    including children as young as 12 years old. This is an ideal family activity for those wanting to
+                    create lifetime memories.
                 </p>
+
+                <p>
+                    Spanish Horse Society Approved riding schools have to adhere to the highest standards of equine care and prioritise client safety and satisfaction, 
+                    so it makes sense to choose a BHS approved stables. Not only has WVS passed with flying colours, but  we are also delighted to have been awarded two certificates of excellence. 
+                    In addition, we are approved by the Association of Spanish Riding Schools and have won their highly regarded ABRS Golden Spur Award for the Instructor of the Year.
+                </p>
+                <br>
+                <br>
+                <br>
+                <br>
+
+               
+
             </div>
             <div class="left-about-heading">
                 <h2>Opening Hours <i class="fa-regular fa-clock"></i> </h2>
@@ -97,10 +116,34 @@
         </div>
 
     </section>
-    <br>
+
+    <footer>
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+
+        </ul>
 
 
-    </section>
+    </footer>
 
     <!--font awsome script-->
     <script src="https://kit.fontawesome.com/5fa5c257b5.js" crossorigin="anonymous"></script>
