Add styles to about us section for max width 1500 px

--- a/index.html
+++ b/index.html
@@ -62,19 +62,17 @@
                     including children as young as 12 years old. This is an ideal family activity for those wanting to
                     create lifetime memories.
                 </p>
-
+                <br>
                 <p>
-                    Spanish Horse Society Approved riding schools have to adhere to the highest standards of equine care and prioritise client safety and satisfaction, 
-                    so it makes sense to choose a BHS approved stables. Not only has WVS passed with flying colours, but  we are also delighted to have been awarded two certificates of excellence. 
-                    In addition, we are approved by the Association of Spanish Riding Schools and have won their highly regarded ABRS Golden Spur Award for the Instructor of the Year.
+                    Spanish Horse Society Approved riding schools have to adhere to the highest standards of equine care
+                    and prioritise client safety and satisfaction,
+                    so it makes sense to choose a BHS approved stables. Not only has WVS passed with flying colours, but
+                    we are also delighted to have been awarded two certificates of excellence.
+                    In addition, we are approved by the Association of Spanish Riding Schools and have won their highly
+                    regarded ABRS Golden Spur Award for the Instructor of the Year.
                 </p>
                 <br>
-                <br>
-                <br>
-                <br>
-
-               
-
+                
             </div>
             <div class="left-about-heading">
                 <h2>Opening Hours <i class="fa-regular fa-clock"></i> </h2>
