Style gallery for responsive design

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <meta name="keywords" content="riding under the sun,horse riding club">
 
     <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Riding under the Sun</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
+    <!-- heading and logo-->
     <header>
         <a href="index.html">
             <h1 id="logo"> Riding under the Sun</h1>
@@ -38,10 +44,11 @@
 
         </div>
     </section>
-
+    <!-- About us section-->
     <section id="about-us">
         <h2 id="welcome">About us</h2>
 
+        <!-- Left section About us page-->
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Riding Under the Sun Riding School</h2>
@@ -72,9 +79,9 @@
                     regarded ABRS Golden Spur Award for the Instructor of the Year.
                 </p>
                 <br>
-                
+                <!-- Opening hours-->
             </div>
-            <div class="left-about-heading">
+            <div class="opening-about-heading">
                 <h2>Opening Hours <i class="fa-regular fa-clock"></i> </h2>
                 <hr>
                 <p>
@@ -90,7 +97,7 @@
                     Closed Bank Holidays
                 </p>
             </div>
-
+            <!-- About us right side pictures-->
         </div>
         <div id="right-about">
             <div id="right-picture-container">
@@ -102,7 +109,7 @@
             </div>
 
         </div>
-
+        <!-- About us center pictures-->
         <div id="center-about">
             <div id="center-picture">
                 <div id="center-picture-bg"></div>
@@ -115,33 +122,39 @@
 
     </section>
 
-    <footer>
-        <ul class="social-networks">
-            <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-            </li>
+    <section>
+        <!-- Social network footer-->
+        <footer>
+            <ul class="social-networks">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </li>
 
-            <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
-            </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i
+                            class="fa-brands fa-twitter"></i></a>
+                </li>
 
-            <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a>
-            </li>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram page (opens in a new tab)"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
 
-            <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-            </li>
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Youtube page (opens in a new tab)"><i
+                            class="fa-brands fa-youtube"></i></a>
+                </li>
 
-        </ul>
+            </ul>
 
 
-    </footer>
+        </footer>
+    </section>
 
     <!--font awsome script-->
     <script src="https://kit.fontawesome.com/5fa5c257b5.js" crossorigin="anonymous"></script>
