Footer moved on the gallery page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Riding under the Sun</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <!-- favicon logo-->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -39,10 +37,11 @@
             </ul>
         </nav>
     </header>
-    <section id="cover-outer">
+    
+    <section id="cover-outer">  
         <div id="cover-image">
 
-        </div>
+        </div> 
     </section>
     <!-- About us section-->
     <section id="about-us">
@@ -122,42 +121,9 @@
 
     </section>
 
-    <section>
-        <!-- Social network footer-->
-        <footer>
-            <ul class="social-networks">
-                <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i
-                            class="fa-brands fa-facebook"></i></a>
-                </li>
+   
 
-                <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens in a new tab)"><i
-                            class="fa-brands fa-twitter"></i></a>
-                </li>
-
-                <li>
-                    <a href="https://instagram.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Instagram page (opens in a new tab)"><i
-                            class="fa-brands fa-instagram"></i></a>
-                </li>
-
-                <li>
-                    <a href="https://youtube.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Youtube page (opens in a new tab)"><i
-                            class="fa-brands fa-youtube"></i></a>
-                </li>
-
-            </ul>
-
-
-        </footer>
-    </section>
-
-    <!--font awsome script-->
-    <script src="https://kit.fontawesome.com/5fa5c257b5.js" crossorigin="anonymous"></script>
+   
 
 </body>
 
