--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,46 @@
         <img src="assets/images/rsz_1pexels-anna-kester-10376090.jpg" alt="group of people on a trail ride">
     </section>
 
+    <section>
+        <!-- Social network footer-->
+
+        <div>
+        <footer>
+            <ul class="social-networks">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </li>
+
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i
+                            class="fa-brands fa-twitter"></i></a>
+                </li>
+
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram page (opens in a new tab)"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
+
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Youtube page (opens in a new tab)"><i
+                            class="fa-brands fa-youtube"></i></a>
+                </li>
+
+            </ul>
+
+
+        </footer>
+    </div>
+    </section>
+
+     <!--font awsome script-->
+     <script src="https://kit.fontawesome.com/5fa5c257b5.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
