Syntax error fixed

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         </nav>
     </header>
     
-    <section id="cover-outer">  
+    <div id="cover-outer">
         <div id="cover-image">
-
+     
         </div> 
-    </section>
+     </div>
     <!-- About us section-->
     <section id="about-us">
         <h2 id="welcome">About us</h2>
